labs/lab6/solution/40-psa-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hardened
  namespace: lab6-secure
  labels:
    app: hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hardened
  template:
    metadata:
      labels:
        app: hardened
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:8080"
            - "-text=cka-hardened-ok"
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
