labs/lab6/solution/30-pdb-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: lab6
  labels:
    app: payments
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:8080"
            - "-text=cka-payments-ok"
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: lab6
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: http
      port: 80
      targetPort: http
